# kalmancpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ExtendedKalmanFilterStatic.cpp  UnscentedKalmanFilterStatic.cpp  demo.cpp  tests.cpp
